Fixed name alignment

--- a/shared/css/static/channel-tree.scss
+++ b/shared/css/static/channel-tree.scss
@@ -109,6 +109,10 @@
                     &.align-center, &.align-repetitive {
                         justify-content: center;
                     }
+
+                    .channel-name {
+                        align-self: center;
+                    }
                 }
 
                 .icons {
